--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header class="header">
        <h1>
            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus totam aperiam ipsa, eius omnis esse neque aliquid inventore eligendi aspernatur rerum ab, quam minus ut molestiae. Dolores nulla minus quo.<main>
-               <section></section>
+               <section>ok</section>
                <section></section>
                <section></section>
                <section></section>
